Fix sizing and alignment of hero img

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
+
 body {
     display: flex;
     flex-direction: column;
     background-color: #2c2a4a;
     color: white;
-    gap: 8px;
+    margin: auto;
+    padding: 0;
+    min-width: 800px;
+    
 }
 
 a {
@@ -25,22 +29,48 @@ h3 {
     font-size: 24px;
 }
 
-
-.header {
+.header,
+.footer{
     display: flex;
-    justify-content: space-evenly;
-
+    justify-content: space-between;
+    flex: 0;
+    height: 50px;
+    padding: 0 15%;
 }
+
+.footer {
+    justify-content: center;
+}
+
+.hero,
+.information,
+.call-to-action,
+.testimonial {
+    display: flex;
+    flex: 1;
+    margin: 16px 0;
+    padding: 0 15%;
+}
+
+.hero {
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+}
+
+.information,
+.call-to-action {
+    justify-content: center;
+    background-color: #907AD6;
+}
+
+
 
 .header-links {
     display: flex;
     justify-content: space-between;
 }
 
-.hero {
-    display: flex;
-    justify-content: space-evenly;
-}
 
 .main-title {
     max-width: 300px;
@@ -52,17 +82,17 @@ h3 {
     margin-bottom: 8px;
 }
 
+
 .title-img {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: -100px;
+    justify-content: flex-end;
 }
 
 .hero img {
     display: flex;
-    max-width: 300px;
+    max-width: 100%;
     border-radius: 8px;
+
 
 }
 
@@ -78,7 +108,7 @@ h3 {
 .information {
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
+    border: 0;
 }
 
 .information h2 {
@@ -97,4 +127,8 @@ h3 {
     border-radius: 12px;
     width: 128px;
     height: 128px;
+}
+
+.footer {
+    margin-top: auto;
 }
